--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
       <video class="video" id="myVideo" width="560" height="315" loop muted>
         <source src="miaw miaw miaw song sad (lyrics video visual).mp4" type="video/mp4" />
       </video>
-      <!-- Masque qui recouvre la vidéo -->
-      <div class="video-mask" id="videoMask"></div>
+      <!-- Superposition pour l'effet de lumière -->
+      <div class="overlay"></div>
     </div>
+
+    <div class="light"></div>
+    <div id="app"></div>
+
 
     <!-- Lien vers le fichier JavaScript -->
     <script src="./index.mjs" type="module"></script>
   </body>
 </html>
+
