--- a/index.html
+++ b/index.html
@@ -14,15 +14,10 @@
   <body>
     <div id="flashlight"></div>
     <!-- Balise vidéo pour la vidéo locale -->
-    <div class="video-container">
-      <!-- La vidéo locale -->
-      <video class="video" id="myVideo" width="560" height="315" loop muted>
-        <source src="miaw miaw miaw song sad (lyrics video visual).mp4" type="video/mp4" />
-      </video>
-      <!-- Superposition pour l'effet de lumière -->
-      <div class="overlay"></div>
-    </div>
-
+    <video id="video" width="100%" height="auto" autoplay loop muted>
+      <source src="miaw miaw miaw song sad (lyrics video visual).mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
     <!-- Script -->
     <script src="index.mjs"></script>
   </body>
